[package]
name = "asdfg"
version = "0.1.0"
authors = ["Paul Götze <paul.christoph.goetze@gmail.com>"]
edition = "2018"
repository = "https://github.com/paulgoetze/asdfg"
description="Installing global asdf packages from a YAML config"
keywords = ["asdf", "cli"]
categories = ["command-line-utilities", "config"]
readme = "README.md"
license-file = "LICENSE"

[dependencies]
structopt = "0.3"
yaml-rust = "0.4"
open = "1.3"
dirs = "2.0"
colored = "1.9"
