[package]
name = "asdfg"
version = "0.2.0"
authors = ["Paul Götze <paul.christoph.goetze@gmail.com>"]
edition = "2021"
repository = "https://github.com/paulgoetze/asdfg"
description="Installing global asdf packages from a YAML config"
keywords = ["asdf", "cli"]
categories = ["command-line-utilities", "config"]
readme = "README.md"
license-file = "LICENSE"

[dependencies]
structopt = "0.3"
yaml-rust = "0.4"
open = "5.0"
dirs = "5.0"
colored = "2.0"
